Added links in index

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,11 @@
 <h1>Thy Tweeter Project</h1>
 
-    <p><a href="/additem">Add Tweet</a></p>
+    <p><a href="/register">Register</a></p>
 
-    <p><a href="/getitem">Get Tweet</a></p>
+    <p><a href="/verify">Verify</a></p>
 
-    <p><a href="/likeuser">Like Tweet</a></p>
-
-    <p><a href="/deleteitem">Delete Tweet</a></p>
+    <p><a href="/login">Login</a></p>
     
-    <p><a href="/searchpage">Search for Tweets</a></p>
-
     <p><a href="/getuser">Get User</a></p>
 
     <p><a href="/getuserfollowers">Get User Followers</a></p>
@@ -17,7 +13,17 @@
     <p><a href="/getuserfollowing">Get User Following</a></p>
 
     <p><a href="/getuserposts">Get User Posts</a></p>
+
+    <p><a href="/likeuser">Like Tweet</a></p>
+
+    <p><a href="/additem">Add Tweet</a></p>
+
+    <p><a href="/deleteitem">Delete Tweet</a></p>
+    
+    <p><a href="/searchpage">Search for Tweets</a></p>
     
     <p><a href="/follow">Follow User</a></p>
+    
+    <p><a href="/getitem">Get Tweet</a></p>
 
     <p><a href="/getmedia">Get Media</a></p>
