--- a/views/additem.handlebars
+++ b/views/additem.handlebars
@@ -21,7 +21,7 @@
     <div>
       <h4>Uploaded Media</h4>
       <div id="uploaded_media" name="content"></div>
-      <input type="hidden" value="" id="media_list">
+      <input type="hidden" value="" id="mediaList">
     </div>
   
     <div><button id = "additem">Add Item</button></div>
