--- a/views/additem.handlebars
+++ b/views/additem.handlebars
@@ -52,19 +52,12 @@ $("#addMedia").on("click",function(event){
     });
 });
 $("#additem").on("click",function(event){
-    let childType = $("#childType").val();
-    if (childType == "") {
-	childType = null;
-    }
-    let parent = $("#parent").val().length > 8 ? $("#parent").val() : null;
-    let mediaList = $("#mediaList").val();
-    if (mediaList == "") {
-	mediaList = null;
-    }
-    else {
-	mediaList = mediaList.split(",");
-    }
-   $.post("/additem",{content:$("#content").val(), childType:childType, media: mediaList, parent: parent}).then(resp=>{
+	let obj ={content:$("#content").val(), media: mediaList}
+	obj.mediaList $("#mediaList").val().length > 1 ? $("#mediaList").val().split(",") : null;
+	obj.childType = $("#childType").val().length > 1 ? $("#childType").val() : null;
+	obj.parent = $("#parent").val().length > 8 ? $("#parent").val() : null;
+	console.log(obj)
+   $.post("/additem",).then(resp=>{
 	   console.log(resp);
    })
 });
