--- a/views/additem.handlebars
+++ b/views/additem.handlebars
@@ -52,12 +52,12 @@ $("#addMedia").on("click",function(event){
     });
 });
 $("#additem").on("click",function(event){
-	let obj ={content:$("#content").val(), media: mediaList}
-	obj.mediaList $("#mediaList").val().length > 1 ? $("#mediaList").val().split(",") : null;
+	let obj ={content:$("#content").val()}
+	obj.media = $("#mediaList").val().length > 1 ? $("#mediaList").val().split(",") : null;
 	obj.childType = $("#childType").val().length > 1 ? $("#childType").val() : null;
 	obj.parent = $("#parent").val().length > 8 ? $("#parent").val() : null;
 	console.log(obj)
-   $.post("/additem",).then(resp=>{
+   $.post("/additem", obj).then(resp=>{
 	   console.log(resp);
    })
 });
